--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "cov:html": "nyc report --reporter=html",
     "cov:send": "nyc report --reporter=lcov > coverage.lcov && codecov",
     "cov:check": "nyc report && nyc check-coverage --lines 75 --functions 50 --branches 75",
+    "demo": "parcel demo/index.html -d build/docs/demo",
     "doc": "run-s doc:html && opn build/docs/index.html",
     "doc:html": "typedoc src/ --target ES6 --mode file --out build/docs",
     "doc:json": "typedoc src/ --target ES6 --mode file --json build/docs/typedoc.json",
+    "doc:demo": "parcel build demo/index.html -d build/docs/demo --public-url ./ --no-source-maps",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "reset": "git reset --hard && yarn",
     "clean": "trash build test",
-    "all": "run-s reset test cov:check doc:html",
+    "all": "run-s reset test cov:check doc:html doc:demo",
     "prepare-release": "run-s all version doc:publish"
   },
   "scripts-info": {
@@ -54,15 +56,21 @@
     "@types/stellar-sdk": "^0.10.3"
   },
   "devDependencies": {
+    "@material-ui/core": "^3.3.1",
     "@types/sinon": "^5.0.5",
     "ava": "1.0.0-beta.7",
+    "babel-polyfill": "^6.26.0",
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
     "gh-pages": "^2.0.0",
     "npm-run-all": "^4.1.3",
     "nyc": "^13.0.1",
     "opn-cli": "^3.1.0",
+    "parcel-bundler": "^1.10.3",
     "prettier": "^1.14.3",
+    "qrcode": "^1.3.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "sinon": "^7.0.0",
     "standard-version": "^4.4.0",
     "stellar-sdk": "^0.11.0",
