chore: Add stellar-sdk as a peerDependency

--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
   "engines": {
     "node": ">=8.9"
   },
+  "peerDependencies": {
+    "stellar-sdk": "*"
+  },
   "dependencies": {
     "@types/stellar-sdk": "^0.10.3"
   },
