--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "cov:check": "nyc report && nyc check-coverage --lines 80 --functions 80 --branches 80",
     "demo": "parcel demo/index.html -d build/docs/demo",
     "doc": "run-s doc:html && opn build/docs/index.html",
-    "doc:html": "typedoc src/ --target ES6 --mode file --out build/docs",
-    "doc:json": "typedoc src/ --target ES6 --mode file --json build/docs/typedoc.json",
+    "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --out build/docs",
+    "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
     "doc:demo": "parcel build demo/index.html -d build/docs/demo --public-url ./ --no-source-maps",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
