--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
   "peerDependencies": {
     "stellar-sdk": "*"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@stellarguard/txrep": "^1.0.5"
+  },
   "devDependencies": {
     "@material-ui/core": "^3.3.1",
     "@types/sinon": "^5.0.5",
