--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@stellarguard/txrep": "^1.0.5"
   },
   "devDependencies": {
+    "@bitjson/typedoc": "^0.15.0-0",
     "@material-ui/core": "^3.3.1",
     "@types/sinon": "^5.0.5",
     "ava": "1.0.0-beta.7",
@@ -76,13 +77,12 @@
     "react-dom": "^16.6.0",
     "sinon": "^7.0.0",
     "standard-version": "^4.4.0",
-    "stellar-sdk": "^3.1.2",
+    "stellar-sdk": "^3.3.0",
     "trash-cli": "^1.4.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-immutable": "^4.7.0",
-    "typedoc": "^0.12.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.5.3"
   },
   "ava": {
     "failFast": true,
