--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "node": ">=10"
   },
   "peerDependencies": {
-    "stellar-sdk": "*"
+    "stellar-sdk": "^5.0.0"
   },
   "dependencies": {
-    "@stellarguard/txrep": "^1.0.7"
+    "@stellarguard/txrep": "^2.0.0"
   },
   "devDependencies": {
     "@bitjson/typedoc": "^0.15.0-0",
@@ -77,7 +77,7 @@
     "react-dom": "^16.6.0",
     "sinon": "^7.0.0",
     "standard-version": "^4.4.0",
-    "stellar-sdk": "^4.0.0",
+    "stellar-sdk": "^5.0.0",
     "trash-cli": "^1.4.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
