--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "node": ">=10"
   },
   "peerDependencies": {
-    "stellar-sdk": "^7.0.0"
+    "stellar-sdk": "*"
   },
   "dependencies": {
     "@stellarguard/txrep": "^2.0.0"
@@ -77,7 +77,7 @@
     "react-dom": "^16.6.0",
     "sinon": "^7.0.0",
     "standard-version": "^4.4.0",
-    "stellar-sdk": "^7.0.0",
+    "stellar-sdk": "^8.0.0",
     "trash-cli": "^1.4.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
